--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sazzad Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcom To</h1>
+            <h1> <span class="orange-color"> Sazzad Idrees</span> World!!</h1>
+            <h3> Build Climber and Train Stopper </h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.
+            </p>
+            <a target="_blank" href="https://www.cricbuzz.com/" class="link-button"> HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/sazzad-pic-edit.png" alt="">
+        </div>
+    </section>
 
 </body>
 
