--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <img src="images/sazzad-pic-edit.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="" class="link-button"> DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 </body>
 
